--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ a:visited :active{
 @media only screen and (min-width: 768px) {
     nav { 
         width: 30%;
-        overflow-y:hidden;
+        overflow-y:scroll;
     }
     #logo2{  width: 15%;}
     
